fixed images getting stretched on mobile devices

--- a/css/layout.css
+++ b/css/layout.css
@@ -380,7 +380,7 @@ ul.nav li a.current {
 .modal img {
 	display: block;
 	margin: auto;
-	height: 200px;
+	height: auto;
 	max-width: 80%;
 	max-height: 80%;
 	border-radius: 15px;
